# jadeitite

./: .gitignore  CHANGELOG.md  CLionCodeStyle.xml  CMakeLists.txt  README.md  c_cpp_properties.json  conan.sh  conanfile.txt
examples/: CMakeLists.txt  main.c  prepare.c
examples/base_template/: CMakeLists.txt
examples/base_template/src/: main.c
examples/basic/: CMakeLists.txt
examples/basic/src/: main.c
examples/glut_template/: CMakeLists.txt
examples/glut_template/src/: main.c
examples/memory/: CMakeLists.txt
examples/memory/src/: main.c
examples/sdl_template/: CMakeLists.txt
examples/sdl_template/src/: main.c
src/: CMakeLists.txt  jadeitite.h  jadeitite_config.h  jadeitite_datatypes.h  jadeitite_entrypoint_glut.h  jadeitite_ep.c  jadeitite_gl.c  jadeitite_gl.h  jadeitite_glut.c  jadeitite_glut.h  jadeitite_log.h  jadeitite_math.c  jadeitite_math.h  jadeitite_string.c  jadeitite_string.h  jadeitite_sys.h
src/demo/: CMakeLists.txt
src/demo/base_template/: CMakeLists.txt
src/demo/base_template/src/: main.c
src/jadeitite/: config.h  datatypes.h  file.c  file.h  math.c  math.h  memory.c  memory.h  string.c  string.h  sys.h
src/jadeitite/emulator/cpu/: m6502.c  m6502.h  m6502_address.c  m6502_opcodes.c
src/jadeitite/entrypoint/: entrypoint_glut.c  glut.c  glut.h  sdl2.c  sdl2.h
src/jadeitite/renderer/: callbacks.h  entrypoint.c  entrypoint.h  gl.c  gl.h  glut.c  glut.h  sdl2.c  sdl2.h  window.h
src/jadeitite/renderer/font/: font8x8_hiragana.h
src/jadeitite/renderer/glut/: entrypoint.c  entrypoint.h  gl.c  glut.h
src/jadeitite/renderer/sdl/: entrypoint.c  entrypoint.h  sdl2.c  sdl2.h
src/main/: jadeitite.h  jadeitite_ep.h
